# project-rlc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  Taskfile.yml  ideas.txt
cmake/luajit/: CMakeLists.txt
content/script/: entity.lua
dox/: binding.dox
src/: binding.c  binding.h  content.h  main.c  script.c  script.h
src/com/: intrinsic.h  isadef.h  iterator.h  string.h  vector.h
src/com/intrinsic/: cclock.h
src/ext/: lua.h
src/lua/: binding.c  binding.h  truncate.h  vector.c  vector.h
src/script/: entity.c  entity.h  truncate.h
